@@ -1,5 +1,7 @@
 2001-03-20  Tim Jenness  <timj@jach.hawaii.edu>
 
+	* Display/KAPVIEW.pm: AGI_DIR removal now done by ORAC::Inst::Defn
+
 	* Print.pm: Add ORAC::Event dependency
 
 	* Recipe.pm (_check_obey_status_string): Fix pattern match for
